--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,7 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
-<!--/*@thymesVar id="owner" type="com.ximenes.sfgpetclinic.models.Owner"*/-->
+<!--/*@thymesVar id="owners" type="java.util.Set<com.ximenes.sfgpetclinic.models.Owner>"*/-->
 <h1 th:text="'List of Owners'">List of Owners...</h1>
 
 <table>
