--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, 'vets')}">
-<head>
-    <meta charset="UTF-8">
-    <title>List of Vets</title>
-</head>
+
+<html xmlns:th="https://www.thymeleaf.org"
+      th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
+
 <body>
-<h1 th:text="'List of Vets'">List of Vets...</h1>
+
+<h2>Veterinarians</h2>
 
 <table id="vets" class="table table-striped">
     <thead>
     <tr>
-        <th style="width: 150px">Id</th>
-        <th style="width: 150px">First Name</th>
-        <th style="width: 150px">Last Name</th>
+        <th>Name</th>
+        <th>Specialties</th>
     </tr>
     </thead>
+    <tbody>
     <tr th:each="vet : ${vets}">
-        <td th:text="${vet?.getId()}">1</td>
-        <td th:text="${vet?.getFirstName()}">jose</td>
-        <td th:text="${vet?.getLastName()}">da silva</td>
+        <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+        <td><span th:each="specialty : ${vet.specialties}"
+                  th:text="${specialty.getDescription() + ' '}" /> <span
+                th:if="${vet.nrOfSpecialties == 0}">none</span></td>
     </tr>
+    </tbody>
 </table>
 </body>
 </html>
